# voice-transcript

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run.py  tox.ini
app/: api.py  config.py  main.py  models.py  run.py  utils.py
app/models/: sentiment.py  speechbrain_ctc_large.py  speechbrain_model.py  voxpopuli_model.py  voxpopuli_test_script.py
demo/: interactive_app.py  visualisation.py
eval/: eval_transcription.ipynb  speechbrain_ctc_large.py
libs/: config.py  features.py  main.py
libs/toolkit/: utils.py
libs/toolkit/features/: feature_extractor.py  noise_reduc.py  resampler.py  vad.py  wav_pipeline.py  wav_transformer.py
pretrained_models/asr-wav2vec2-commonvoice-fr/: hyperparams.yaml
samples/: bonjour.b64  bonjour.flac  bonjour_16k.b64  bonjour_8k.b64  dollar_eisenhower.flac  france3_1.flac  france3_1.wav_8k.b64  france3_2.flac  france3_2.wav_8k.b64
tests/: main.py
