[build-system]
requires = ["setuptools ~= 58.0", "wheel"]
# ERROR: Project file:///home/inarighas/Projects/voice-transcript has a 'pyproject.toml' and its build backend is missing the 'build_editable' hook. 
# Since it does not have a 'setup.py' nor a 'setup.cfg', it cannot be installed in editable mode. Consider using a build backend that supports PEP 660.

[project]
name = "voice-transcript"
description = "transcription module"
version = "0.1.0"
authors = [
    { name = "Ali Saghiran", email = "ali.saghiran@resileyes.com" }
    ]
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
test = [
    "flake8",
    "black==21.9b0",
    "pre-commit==2.15.0",
    "mypy==0.910",
    "pytest==6.2.5",
    "pytest-cov==3.0.0",
]