[build-system]
requires = ["setuptools", "wheel"]
# ERROR: Project file:///home/inarighas/Projects/voice-transcript has a 'pyproject.toml' and its build backend is missing the 'build_editable' hook. 
# Since it does not have a 'setup.py' nor a 'setup.cfg', it cannot be installed in editable mode. Consider using a build backend that supports PEP 660.

[project]
name = "voice-transcript"
description = "transcription module"
version = "0.1.0"
authors = [
    { name = "Ali Saghiran", email = "ali.saghiran@resileyes.com" }
    ]
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
test = [
    "flake8",
    "black",
    "pre-commit==2.15.0",
    "mypy",
    "pytest",
    "pytest-cov",
]


# Code style

[tool.black]
line-length = 70

[tool.isort]
profile = "black"

[tool.flake8]
ignore = "D203"
exclude = '.git, __pycache__,docs/, old, build, dist, .venv, .vscode, models/voxpopuli_test_script.py'
max-complexity = 10

[tool.pytest.ini_options]
# filterwarnings = ignore::DeprecationWarning
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
