[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "voice-transcript"
description = "transcription module"
version = "0.1.0"
authors = [
    { name = "Ali Saghiran", email = "a.saghiran@gmail.com" }
    ]
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
test = [
    "flake8",
    "black",
    "pre-commit==2.15.0",
    "mypy",
    "pytest",
    "pytest-cov",
]


# Code style

[tool.black]
line-length = 70

[tool.isort]
profile = "black"

[tool.flake8]
ignore = "D203"
exclude = '.git, __pycache__,docs/, old, build, dist, .venv, .vscode, models/voxpopuli_test_script.py'
max-complexity = 10

[tool.pytest.ini_options]
# filterwarnings = ignore::DeprecationWarning
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
